[tool.poetry]
name = "basic_usage"
version = "0.1.0"
description = ""
authors = ["Andrew Ingram <andy@andrewingram.net>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = ">=3.2"
django-fsm-enhanced = {path = "../..", develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"